--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,11 @@ a:hover{
     padding: 20px
 }
 
-.boardcontainer{
+#boardcontainer{
     width: fit-content;
 }
 
-.index {
+#index {
     margin: 20px;
     line-height: 1.5;
     columns: 2
@@ -78,6 +78,4 @@ a:hover{
     margin-top: 200px;
 }
 
-.title{
-    border: solid aqua;
-}
+
