Made changes to index.php header , which includes a link to a login page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,27 @@
 body{
     background-color: #000;
     font-family: "Lucida Console";
-    margin: 0px;
     color: #6b6b6b;
+}
+
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000;
+}
+
+li{
+    float: left;
+}
+
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 img {
